--- a/src/components/CreateForm.module.css
+++ b/src/components/CreateForm.module.css
@@ -3,4 +3,15 @@
     width: 50%;
     margin: auto;
 }
+.toggleContainer{
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+}
+.btnsContainer{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    
+}
 
