--- a/src/components/Menu.module.css
+++ b/src/components/Menu.module.css
@@ -91,9 +91,12 @@
 
 img{
   display: flex;
-  justify-content: flex-start;
+  justify-content: flex-end;
   position: absolute;
+
   width: 45px;
   top: 10px;
+  /* left: 10px; */
+  right: 16vw;
   /* left: 10px; */
 }
