--- a/src/components/UI/Input/Input.module.css
+++ b/src/components/UI/Input/Input.module.css
@@ -2,6 +2,7 @@ input[type=text] {
     width: 100%;
     padding: 12px 20px;
     margin: 8px 0;
+    font-size: 15px;
     box-sizing: border-box;
     border: 2px solid #E10075;
     outline: none;
