--- a/src/components/UI/FormAlert/FormAlert.module.css
+++ b/src/components/UI/FormAlert/FormAlert.module.css
@@ -2,14 +2,14 @@
 
     display: flex;
     flex-direction: column;
-    align-items: center;
+    justify-content: center;
+    align-items: start;
 
-    margin: auto;
+    /* margin: auto; */
     width: 0;
     height: 0;
     color: red;
     border-radius: 6px;
-    border: 2px solid red;
     background-color: white;
     padding: 10px;
     transition: 0.5s;
@@ -19,26 +19,19 @@
         font-size: 0rem;
         transition: 0.5s;
         border:none;
-        /* transition: 0.5s; */
         width: 0;
         height: 0;
-        /* display: none; */
     }
 }
 
 .open{
     transition: 0.5s;
-    /* font-size: 17px; */
     font-size: 0.813rem;
-
-    background-color: rgb(255, 219, 219);
     color: rgb(255, 0, 0);
     width: 60%;
-    height: 50px;
 }
 
 .exception_block{
-    /* font-size: 0.813rem; */
     display: flex;
     left: 0;
     width: 100%;
