--- a/src/components/UI/FormAlert/FormAlert.module.css
+++ b/src/components/UI/FormAlert/FormAlert.module.css
@@ -3,7 +3,7 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: start;
+    align-items: flex-start;
 
     /* margin: auto; */
     width: 0;
