--- a/src/components/UI/Input/Input.module.css
+++ b/src/components/UI/Input/Input.module.css
@@ -12,3 +12,24 @@ input {
   label{
     display: flex
   }
+
+  .labelContainer{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
+
+  .securityLabelBtn{
+    
+    display:flex;
+    align-items:center;
+    justify-content: space-between ;
+    width: 20%;
+
+    cursor: pointer;
+
+    -webkit-user-select: none; /* Safari */
+    -ms-user-select: none; /* IE 10 and IE 11 */
+    user-select: none; /* Standard syntax */
+  }
+
