authorization , authentication , registration , code refactor , jwt support, refresh token support

--- a/src/components/Menu.module.css
+++ b/src/components/Menu.module.css
@@ -22,8 +22,8 @@
 }
 
 .openbtn { 
-    margin-left: 10px;
-    margin-top: 10px;
+    /* margin-left: 10px;
+    margin-top: 10px; */
 
     font-size: 20px;
     cursor: pointer;
