--- a/src/components/UI/Input/Input.module.css
+++ b/src/components/UI/Input/Input.module.css
@@ -24,7 +24,7 @@ input {
     display:flex;
     align-items:center;
     justify-content: space-between ;
-    width: 20%;
+    width: 140px;
 
     cursor: pointer;
 
