add user to room fix, live message in room

--- a/src/components/RoomComponents/Room.module.css
+++ b/src/components/RoomComponents/Room.module.css
@@ -79,3 +79,10 @@
 
     color: red;
 }
+.liveStatus{
+    display:flex;
+    align-items: center;
+    justify-content: space-between;
+    color: red;
+    width: 60px;
+}
